# synacor-challenge

./: .gitignore  CMakeLists.txt  Makefile  README.md  breakpoints  debug.c  debug.h  exec.c  exec.h  mem.c  stack.c  stack.h  value.c  vm.c  vm.h
aux/: teleporter.c  testcoins.c
data/: binview  hexview
doc/: arch-spec  todo  todo.txt
include/: debug.h  exec.h  logging.h  mem.h  stack.h  value.h  vm.h
log/: decomp.txt  decomp_heap.txt  decomp_outs.txt
script/: breakpoints  fastforward
src/: debug.c  exec.c  logging.c  mem.c  stack.c  value.c  vm.c
synacor_tests/: CMakeLists.txt
synacor_tests/basic_tests/: CMakeLists.txt  all_tests.cpp  basic_check.cpp  mem_check.cpp  stack_check.cpp
